# editor-assistant

./: .gitignore  CHANGELOG.md  DEVELOPER.md  DEVELOPER_GUIDE.md  FUTURE_ROADMAP.md  ISSUES_REPORT.md  Makefile  README.md  TODO.md  TODO_claude.md  TODO_codex.md  TODO_gemini.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.cursor/rules/: editor-assistant.mdc
backup/chunker_legacy/: README.md
config/llms/: llm_config.py
config/markitdown/: support_formats.py  supported_formats.py
docs/: ENGINEERING_GUIDE.md  argparse_and_cli_reference.md  cli_usage.md  logging_system_manual.md  python_logging_basics.md  user_customization_guide.md
docs/design_docs/: rfc_async_refactor.md  rfc_glm47_gemini_free.md
docs/reports/: COMPREHENSIVE_AUDIT_REPORT_CLAUDE_v5-1-0.md  COMPREHENSIVE_REVIEW_REPORT_CODEX_V-5-1-0.md  async_verification_report.md
editor_assistant/: _clean_html_to_md.py  _contentchunker.py  _llm_client.py  _llmclient.py  _md_converter.py  _prompt_research_summarizer.py  _prompt_translator.py  _summarizer.py  main.py
https:/m.thepaper.cn/md/: m.thepaper.cn_newsDetail_forward_31278661.md
https:/qianwen-res.oss-cn-beijing.aliyuncs.com/Qwen-Image/md/: qianwen-res.oss-cn-beijing.aliyuncs.com_Qwen-Image_Qwen_Image.pdf.md
scripts/: check_command_conflicts.sh
src/: clean_html_to_md.py  llm_client.py  main.py  md_converter.py  md_summarizer.py
src/editor_assistant/: clean_html_to_md.py  cli.py  content_validation.py  data_models.py  llm_client.py  main.py  md_converter.py  md_processesor.py  md_processor.py  md_summarizer.py  utils.py
src/editor_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/editor_assistant/config/: __init__.py  constants.py  llm_config.yml  llm_models.py  load_prompt.py  logging_config.py  set_llm.py  user_config.py
src/editor_assistant/storage/: __init__.py  database.py  repository.py
src/editor_assistant/tasks/: __init__.py  base.py  brief.py  outline.py  translate.py
test_output/: nrr_lww_chunk_01.md  nrr_lww_chunk_02.md  nrr_lww_chunk_03.md  pmc_article_chunk_01.md  pmc_article_chunk_02.md  pmc_article_chunk_03.md
tests/: README.md  __init__.py  conftest.py  issue_report.md  test_content_chunker.py
tests/fixtures/: __init__.py  md_input.py  test_urls.py
tests/fixtures/sample_data/: A Mathematical Theory of Communication.md  Weaver_Warren_1949_The_Mathematics_of_Communication.md
tests/integration/: __init__.py  test_async_flow.py  test_batch_ui.py  test_cli.py  test_llm_api.py  test_storage_integration.py  test_tasks_api.py
tests/stress/: test_error_boundaries.py  test_real_load.py  test_sqlite_concurrency.py
tests/unit/: __init__.py  test_content_validation.py  test_data_models.py  test_llm_client.py  test_llm_client_async.py  test_main.py  test_md_converter.py  test_md_processor.py  test_md_processor_async.py  test_storage.py  test_tasks.py
(+9 files in other folders)
