[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "editor_assistant"
version = "0.1"
dependencies = [
    "markitdown",
    "requests",
    "argparse",
    "python-dotenv",
    "pydantic",
    "trafilatura",
    "readabilipy",
    "html2text",
    "pyyaml",
]

[project.scripts]
any2md = "editor_assistant.src.editor_assistant.md_converter:main"
html2md = "editor_assistant.src.editor_assistant.clean_html_to_md:main"
summarize_md = "editor_assistant.src.editor_assistant.md_summarizer:main"
summarize_research = "editor_assistant.src.editor_assistant.main:summarize_research"
summarize_news = "editor_assistant.src.editor_assistant.main:summarize_news"